Update  index.html

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
             color: #333;
         }
 
+        p {
+            color: #555;
+            font-size: 18px;
+        }
+
         .button {
             display: inline-block;
             background-color: #4CAF50;
@@ -34,8 +39,8 @@
     </style>
 </head>
 <body>
-    <h1>Bienvenue sur mon site</h1>
-    <p>Découvrez mes projets et mes profils professionnels :</p>
+    <h1>Bienvenue sur mon site personnel</h1>
+    <p>Je suis étudiant en Master 1 d'Ingénierie Logicielle, passionné par le développement logiciel et les technologies innovantes. Explorez mes projets et mes profils professionnels pour en savoir plus sur mon parcours et mes compétences.</p>
     <a href="https://github.com/votre-nom" class="button" target="_blank">GitHub</a>
     <a href="https://www.linkedin.com/in/votre-nom" class="button" target="_blank">LinkedIn</a>
     <a href="https://votre-cv-link.com" class="button" target="_blank">Mon CV</a>
