--- a/index.html
+++ b/index.html
@@ -71,8 +71,8 @@
         Etudiant en Master 1 d'Ingénierie Logicielle, passionné par le développement logiciel et les technologies 
         innovantes. Découvrez mes projets, mes compétences et mes profils professionnels en cliquant sur les liens ci-dessous.
     </p>
-    <a href="https://github.com/votre-nom" class="button" target="_blank">GitHub</a>
-    <a href="https://www.linkedin.com/in/votre-nom" class="button" target="_blank">LinkedIn</a>
+    <a href="https://github.com/AliWari2" class="button" target="_blank">GitHub</a>
+    <a href="https://www.linkedin.com/in/ali-wari-2a70a2272/" class="button" target="_blank">LinkedIn</a>
     <a href="https://votre-cv-link.com" class="button" target="_blank">Mon CV</a>
     <footer>&copy; 2024 | Créé par Ali Wari</footer>
 </body>
