--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mon Site Personnel</title>
     <style>
+        /* Style général */
         body {
             font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
             margin: 0;
@@ -21,16 +22,27 @@
 
         h1 {
             font-size: 2.5em;
-            margin-bottom: 10px;
+            margin-bottom: 20px;
             text-shadow: 2px 2px 8px rgba(0, 0, 0, 0.3);
         }
 
         p {
             font-size: 1.2em;
-            margin-bottom: 30px;
+            margin-bottom: 20px;
             line-height: 1.5;
             max-width: 600px;
         }
+
+        /* Conteneur des boutons */
+        .button-container {
+            display: flex;
+            justify-content: center;
+            flex-wrap: wrap;
+            gap: 15px;
+            margin-bottom: 20px;
+        }
+
+        /* Boutons */
         .button {
             display: inline-block;
             background: #ffffff;
@@ -38,7 +50,6 @@
             padding: 15px 25px;
             font-size: 16px;
             font-weight: bold;
-            margin: 10px;
             border-radius: 50px;
             text-decoration: none;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
@@ -52,7 +63,9 @@
             transform: translateY(-3px);
             box-shadow: 0px 6px 8px rgba(0, 0, 0, 0.3);
         }
-        #stage-section {
+
+        /* Section dynamique */
+        .content-section {
             display: none;
             background: rgba(255, 255, 255, 0.9);
             color: #333;
@@ -61,6 +74,7 @@
             border-radius: 10px;
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.2);
             max-width: 800px;
+            text-align: left;
         }
 
         footer {
@@ -76,13 +90,23 @@
         Je suis étudiant en Master 1 d'Ingénierie Logicielle, passionné par le développement logiciel et les technologies 
         innovantes. Découvrez mes projets, mes compétences et mes expériences ci-dessous.
     </p>
-    <a href="#apropos" class="button">À propos</a>
-    <a href="https://github.com/AliWari2" class="button" target="_blank">GitHub</a>
-    <a href="https://www.linkedin.com/in/ali-wari-2a70a2272/" class="button" target="_blank">LinkedIn</a>
-    <a href="https://votre-cv-link.com" class="button" target="_blank">CV</a>
-    <button class="button" onclick="toggleStage()">Stage</button>
 
-    <div id="stage-section">
+    <div class="button-container">
+        <button class="button" onclick="toggleSection('apropos')">À propos</button>
+        <a href="https://github.com/votre-nom" class="button" target="_blank">GitHub</a>
+        <a href="https://www.linkedin.com/in/votre-nom" class="button" target="_blank">LinkedIn</a>
+        <a href="https://votre-cv-link.com" class="button" target="_blank">CV</a>
+        <button class="button" onclick="toggleSection('stage')">Stage</button>
+    </div>
+
+    <div id="apropos" class="content-section">
+        <h2>À propos de moi</h2>
+        <p>
+            Je suis titulaire d'une licence en informatique obtenue à l'Université de Bretagne Occidentale. Actuellement, je poursuis un Master 1 en ingénierie logicielle, un domaine qui m'a toujours fasciné. Mon intérêt pour l'informatique a commencé dès mon plus jeune âge, en observant mon grand frère travailler sur des projets de programmation. Cette curiosité s'est transformée en une véritable passion, m'amenant à développer des compétences approfondies et une méthodologie basée sur la curiosité, l'organisation et la rigueur.
+        </p>
+    </div>
+
+    <div id="stage" class="content-section">
         <h2>Stage L3 Informatique</h2>
         <p><strong>Développeur web PHP :</strong> création d'un site web de gestion et de vente de produits pour la boulangerie “M’hira boulangerie”.</p>
         <ul>
@@ -95,12 +119,15 @@
     <footer>&copy; 2024 | Créé par Ali Wari</footer>
 
     <script>
-        function toggleStage() {
-            const stageSection = document.getElementById('stage-section');
-            if (stageSection.style.display === 'none' || stageSection.style.display === '') {
-                stageSection.style.display = 'block';
+        function toggleSection(sectionId) {
+            const section = document.getElementById(sectionId);
+            if (section.style.display === 'none' || section.style.display === '') {
+                // Masquer les autres sections
+                document.querySelectorAll('.content-section').forEach(sec => sec.style.display = 'none');
+                // Afficher la section demandée
+                section.style.display = 'block';
             } else {
-                stageSection.style.display = 'none';
+                section.style.display = 'none';
             }
         }
     </script>
