--- a/apropos.html
+++ b/apropos.html
@@ -9,7 +9,7 @@
             margin: 0;
             padding: 0;
             font-family: 'Arial', sans-serif;
-            background: linear-gradient(to bottom, #6a11cb, #2575fc);
+            background: linear-gradient(to bottom, #1e3c72, #2a5298);
             color: #fff;
             padding: 40px;
             display: flex;
@@ -21,19 +21,26 @@
         h1 {
             font-size: 2.5em;
             margin-bottom: 20px;
+            text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
         }
 
         p {
             font-size: 1.2em;
             line-height: 1.6;
             max-width: 800px;
+            text-align: justify;
         }
 
         a {
             color: #fff;
             text-decoration: underline;
             margin-top: 20px;
-            display: inline-block;
+            font-weight: bold;
+            font-size: 1.1em;
+        }
+
+        a:hover {
+            color: #b3d4fc;
         }
     </style>
 </head>
