--- a/index.html
+++ b/index.html
@@ -81,7 +81,8 @@
         <a href="stage.html" class="button">Stage</a>
         <a href="https://github.com/AliWari2" class="button" target="_blank">GitHub</a>
         <a href="https://www.linkedin.com/in/ali-wari-2a70a2272/" class="button" target="_blank">LinkedIn</a>
-        <a href="https://votre-cv-link.com" class="button" target="_blank">CV</a>
+        <a href="cv.html" class="button">CV</a>
+
     </div>
     <footer>
         &copy; 2024 | Créé par Ali Wari
