--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
     <header>
         <h1>Ali Wari</h1>
         <p>
-            Étudiant en Master 1 Ingénierie Logicielle, passionné par le développement logiciel et les technologies innovantes. Découvrez mes projets, compétences, et expériences en cliquant sur les boutons ci-dessous.
+            Étudiant en Master 1 Ingénierie Logicielle, passionné par le développement logiciel et les technologies innovantes, je suis à la recherche d'un stage de plusieurs mois à partir d'avril 2024 et d'une alternance à partir de septembre 2024. Découvrez mes projets, compétences et expériences en cliquant sur les boutons ci-dessous.
         </p>
     </header>
 
