--- a/apropos.html
+++ b/apropos.html
@@ -47,7 +47,29 @@
 <body>
     <h1>À propos</h1>
     <p>
-        Je suis titulaire d'une licence en informatique obtenue à l'Université de Bretagne Occidentale. Actuellement, je poursuis un Master 1 en ingénierie logicielle, un domaine qui m'a toujours fasciné. Mon intérêt pour l'informatique a commencé dès mon plus jeune âge, en observant mon grand frère travailler sur des projets de programmation. Cette curiosité s'est transformée en une véritable passion, m'amenant à développer des compétences approfondies et une méthodologie basée sur la curiosité, l'organisation et la rigueur.
+        <strong>Parcours académique et formation</strong>
+Je suis titulaire d’une licence en informatique, obtenue à l’Université de Bretagne Occidentale, une formation qui m’a permis de consolider mes bases en développement, en algorithmique et en gestion des systèmes informatiques. Cette licence a été le point de départ de mon immersion approfondie dans le monde de l’informatique, avec des cours pratiques et théoriques qui m’ont apporté une solide compréhension des fondamentaux du métier.
+
+Actuellement, je poursuis un Master 1 en ingénierie logicielle, un domaine qui m’a toujours fasciné par ses multiples défis et ses possibilités d’innovation. Cette spécialisation me permet d'approfondir mes connaissances en architecture logicielle, en développement de logiciels complexes et en gestion de projets, tout en maîtrisant les outils et technologies nécessaires pour évoluer dans un environnement professionnel exigeant.
+
+        <strong>Compétences développées au fil du temps</strong>
+Mon parcours académique et personnel m’a permis de développer des compétences approfondies dans plusieurs domaines clés de l’informatique :
+
+Développement logiciel : J’ai acquis une maîtrise des langages tels que Java, C, PHP, et JavaScript, ainsi que des frameworks associés comme React et Node.js.
+Gestion de bases de données : Mon expertise en SQL et l’utilisation de bases de données comme SQL Server me permettent de concevoir des solutions robustes et performantes.
+Méthodologie et organisation : Mon approche est fondée sur la curiosité, l’organisation et la rigueur. J’accorde une grande importance à la structure et à la qualité du code, ainsi qu’à la documentation claire et précise des projets sur lesquels je travaille.
+
+        <strong>Une méthodologie basée sur la curiosité, l'organisation et la rigueur</strong>
+Ces trois qualités sont les piliers de ma démarche professionnelle :
+
+Curiosité : J’aime explorer de nouvelles technologies et méthodologies. Cette curiosité me pousse à rester à jour avec les évolutions du secteur et à toujours chercher des solutions innovantes aux problèmes complexes.
+Organisation : J’accorde une grande importance à la planification et à la gestion du temps. Chaque projet que je mène est structuré en étapes claires, avec des objectifs définis pour garantir une progression régulière.
+Rigueur : Je suis particulièrement attentif aux détails, que ce soit dans l’écriture du code, la documentation ou la gestion des bases de données. Mon objectif est toujours d’assurer la qualité et la fiabilité des solutions développées.
+
+        <strong>Motivation pour l’avenir</strong>
+Aujourd’hui, je suis déterminé à exceller dans le domaine de l’ingénierie logicielle. Mon parcours, combiné à ma passion et à ma méthodologie de travail, me permet de relever les défis techniques avec confiance. Chaque projet est une opportunité d’apprentissage et d’amélioration, et je suis prêt à m’investir pleinement pour contribuer à des projets ambitieux et innovants.
+
+En résumé, l’informatique n’est pas simplement un domaine d’étude pour moi, mais une véritable vocation. Je suis enthousiaste à l’idée de continuer à approfondir mes compétences et de mettre à profit mon expertise pour relever les défis de l’ingénierie logicielle.
     </p>
     <a href="index.html">Retour à la page d'accueil</a>
 </body>
